--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -20,8 +20,8 @@
 #
 # Use a descriptive name for your cluster:
 #
-{% if cluster.name is defined %}
-cluster.name: {{ cluster.name }}
+{% if es_config.cluster.name is defined %}
+cluster.name: {{ es_config.cluster.name }}
 {% else %}
 # cluster.name: my-application
 {% endif %}
@@ -30,16 +30,16 @@ cluster.name: {{ cluster.name }}
 # ------------------------------------ Node ------------------------------------
 #
 # Use a descriptive name for the node:
-{% if node.name is defined %}
-node.name: {{ node.name }}
+{% if es_config.node.name is defined %}
+node.name: {{ es_config.node.name }}
 {% else %}
 # node.name: node-1
 {% endif %}
 #
 # Add custom attributes to the node:
 #
-{% if node.attr is defined %}
-{% for key, value in node.attr.items() %}
+{% if es_config.node.attr is defined %}
+{% for key, value in es_config.node.attr.items() %}
 node.attr.{{ key }}: {{ value }}
 {% endfor %}
 {% else %}
@@ -50,16 +50,16 @@ node.attr.{{ key }}: {{ value }}
 #
 # Path to directory where to store the data (separate multiple locations by comma):
 #
-{% if path.data is defined %}
-path.data: {{ path.data }}
+{% if es_config.path.data is defined %}
+path.data: {{ es_config.path.data }}
 {% else %}
 path.data: /var/lib/elasticsearch
 {% endif %}
 #
 # Path to log files:
 #
-{% if path.logs is defined %}
-path.logs: {{ path.logs }}
+{% if es_config.path.logs is defined %}
+path.logs: {{ es_config.path.logs }}
 {% else %}
 path.logs: /var/log/elasticsearch
 {% endif %}
@@ -68,8 +68,8 @@ path.logs: /var/log/elasticsearch
 #
 # Lock the memory on startup:
 #
-{% if bootstrap_memory_lock is defined %}
-bootstrap.memory_lock: {{ bootstrap_memory_lock }}
+{% if es_config.bootstrap_memory_lock is defined %}
+bootstrap.memory_lock: {{ es_config.bootstrap_memory_lock }}
 {% else %}
 #bootstrap.memory_lock: true
 {% endif %}
@@ -85,8 +85,8 @@ bootstrap.memory_lock: {{ bootstrap_memory_lock }}
 # By default Elasticsearch is only accessible on localhost. Set a different
 # address here to expose this node on the network:
 #
-{% if network_host is defined %}
-network.host: {{ network_host }}
+{% if es_config.network_host is defined %}
+network.host: {{ es_config.network_host }}
 {% else %}
 #network.host: 192.168.0.1
 {% endif %}
@@ -94,8 +94,8 @@ network.host: {{ network_host }}
 # By default Elasticsearch listens for HTTP traffic on the first free port it
 # finds starting at 9200. Set a specific HTTP port here:
 #
-{% if http.port is defined %}
-http.port: {{ http.port }}
+{% if es_config.http.port is defined %}
+http.port: {{ es_config.http.port }}
 {% else %}
 #http.port: 9200
 {% endif %}
@@ -118,7 +118,7 @@ discovery.seed_hosts:  {{ es_hosts }}
 {% if es_master_hosts is defined %}
 cluster.initial_master_nodes: {{ es_master_hosts }}
 {% else %}
-cluster.initial_master_nodes: ["{{ node.name }}"]
+cluster.initial_master_nodes: ["{{ es_config.node.name }}"]
 {% endif %}
 #
 # For more information, consult the discovery and cluster formation module documentation.
@@ -143,7 +143,7 @@ cluster.initial_master_nodes: ["{{ node.name }}"]
 # --------------------------------------------------------------------------------
 
 # Enable security features
-{% if xpack.security.enabled is defined %}
+{% if es_config.xpack.security.enabled is defined %}
 xpack.security.enabled: {{ xpack.security.enabled }}
 {% else %}
 xpack.security.enabled: true
